<resources>
    <string name="app_name">Задачи</string>
    <string name="listIsEmpty">Cписок пуст</string>
    <string name="isFavourite">Избранное</string>
    <string name="newTask">Новая задача</string>
    <string name="taskTitle">Заголовок</string>
    <string name="description">Описание</string>
    <string name="addToFavourite">Добавить в избранное</string>
    <string name="about">О приложении</string>
    <string name="tasks">Задачи</string>
    <string name="editTask">Редактировать задачу</string>
    <string name="enterName">Введите название</string>
    <string name="enterTitle">Введите заголовок</string>
    <string name="editGroup">Редактировать список</string>
    <string name="name">Название</string>
    <string name="createItemQuestion">Что вы хотите создать?</string>
    <string name="task">Задача</string>
    <string name="group">Список</string>
    <string name="set">Назначить</string>
    <string name="newGroup">Новая группа</string>
    <string name="create">Создать</string>
    <string name="add_date_time">Добавить дату / время</string>
</resources>