<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/tasks_fragment">

    <fragment
        android:id="@+id/tasks_fragment"
        android:name="ru.lonelywh1te.kotlin_tasklist.presentation.fragment.TasksFragment"
        android:label="@string/tasks"
        tools:layout="@layout/fragment_tasks" >
        <action
            android:id="@+id/to_task_fragment"
            app:destination="@id/task_fragment" />
        <action
            android:id="@+id/to_task_group_fragment"
            app:destination="@id/task_group_fragment" />
    </fragment>
    <fragment
        android:id="@+id/favourite_tasks_fragment"
        android:name="ru.lonelywh1te.kotlin_tasklist.presentation.fragment.FavouriteTasksFragment"
        android:label="@string/isFavourite"
        tools:layout="@layout/fragment_favourite_tasks" >
        <action
            android:id="@+id/to_task_fragment"
            app:destination="@id/task_fragment" />
    </fragment>
    <fragment
        android:id="@+id/info_fragment"
        android:name="ru.lonelywh1te.kotlin_tasklist.presentation.fragment.InfoFragment"
        android:label="@string/about"
        tools:layout="@layout/fragment_info" />
    <fragment
        android:id="@+id/task_fragment"
        android:name="ru.lonelywh1te.kotlin_tasklist.presentation.fragment.task.TaskFragment"
        android:label="{label}"
        tools:layout="@layout/fragment_task">
        <argument
            android:name="task_id"
            app:argType="integer" />
        <argument
            android:name="label"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/task_group_fragment"
        android:name="ru.lonelywh1te.kotlin_tasklist.presentation.fragment.taskGroup.TaskGroupFragment"
        android:label="{label}"
        tools:layout="@layout/fragment_task_group">
        <argument
            android:name="id"
            app:argType="integer" />
        <argument android:name="label" />
        <action
            android:id="@+id/to_task_fragment"
            app:destination="@id/task_fragment" />
    </fragment>
</navigation>