<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="15dp"
    android:background="@drawable/shape_bottom_sheet_fragment_background">

    <EditText
        android:id="@+id/inputTaskTitle"
        android:textAppearance="@style/textDefaultStyle"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/taskTitle"
        android:inputType="textShortMessage"
        app:counterEnabled="true"
        app:counterMaxLength="24"/>

    <EditText
        android:id="@+id/inputTaskDescription"
        android:textAppearance="@style/textDefaultStyle"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:gravity="top"
        android:hint="@string/description"
        app:counterEnabled="true"
        app:counterMaxLength="24"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descInputlayout">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/addToFavourite"
            android:textAppearance="@style/textDefaultStyle" />

        <CheckBox
            android:id="@+id/cbIsFavourive"
            style="@style/checkboxStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="Дата выполнения"
            android:textAppearance="@style/textDefaultStyle" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_set_task_completion_date"
            style="@style/defaultButton"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/set"
            android:textSize="12sp" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_create_task"
        style="@style/defaultButton"
        android:backgroundTint="@color/accentColor"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="Создать"
        android:textSize="12sp" />
</LinearLayout>